fix: support dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,20 +3,18 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --text: black;
+  --background: rgb(229, 229, 229);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --text: rgb(229, 229, 229);
+    --background: black;
   }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background-color: aliceblue;
+  color: var(--text);
+  background-color: var(--background);
 }
